--- a/index.html
+++ b/index.html
@@ -1,137 +1,135 @@
 <!DOCTYPE html>
-<html lang="zh-cn">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>简历</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-        .container {
-            width: 80%;
-            margin: auto;
-            overflow: hidden;
-        }
-        header {
-            background: #333;
-            color: #fff;
-            padding-top: 30px;
-            min-height: 70px;
-            border-bottom: #77aaff 3px solid;
-        }
-        header a {
-            color: #fff;
-            text-decoration: none;
-            text-transform: uppercase;
-            font-size: 16px;
-        }
-        header ul {
-            padding: 0;
-            list-style: none;
-        }
-        header li {
-            float: left;
-            display: inline;
-            padding: 0 20px 0 20px;
-        }
-        header #branding {
-            float: left;
-        }
-        header #branding h1 {
-            margin: 0;
-        }
-        header nav {
-            float: right;
-            margin-top: 10px;
-        }
-        .main {
-            padding: 20px;
-            background: #fff;
-            margin-top: 20px;
-        }
-        .main h2 {
-            text-align: center;
-        }
-        .section {
-            margin-bottom: 20px;
-        }
-        .section h3 {
-            border-bottom: 2px solid #333;
-            padding-bottom: 10px;
-        }
-        .section ul {
-            list-style: none;
-            padding: 0;
-        }
-        .section ul li {
-            padding: 5px 0;
-        }
-    </style>
+    <title>简历制作my Dong</title>
+    <link rel="stylesheet" href="1.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <div id="branding">
-                <h1>你的名字</h1>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="#about">关于我</a></li>
-                    <li><a href="#education">教育背景</a></li>
-                    <li><a href="#skills">技能</a></li>
-                    <li><a href="#contact">联系方式</a></li>
-                </ul>
-            </nav>
+ 
+<!-- 先定一个大的容器 -->
+<div class="container">
+    <div class="topline" >
+        <div class="top_left" ></div>
+        <div class="top_right">
+            <p>个人简历</p>
         </div>
-    </header>
-
-    <div class="container main">
-        <section id="about" class="section">
-            <h2>关于我</h2>
-            <p>我叫[你的名字]，是来自中国电子科技大学的一名微电子专业的学生。在本科期间，我对半导体物理与器件、集成电路设计以及微纳制造技术产生了浓厚的兴趣，并通过一系列课程的学习积累了扎实的专业基础。我在校期间参与了[具体项目或研究课题]的研究工作，在此过程中不仅加深了对专业知识的理解，还锻炼了我的科研能力和团队合作精神。此外，我还积极参加了[实习经历或其他相关活动]，这些经历让我更加坚信自己未来希望在微电子领域深入探索和发展。</p>
-        </section>
-
-
-        <section id="education" class="section">
-            <h2>教育背景</h2>
-            <ul>
-                <li>
-                    <h3>电子科技大学 - 微电子学士</h3>
-                    <p style = "font-weight: bold;">2021/9 - 2025/6</p>
-                    <p></p>
-                </li>
-                <li>
-                    成绩排名: 毕业时位于年级前5%，表现出色。
-                </li>
-                <li>
-                    科研经历:
-                        参与了“[具体项目名称]”的研究项目，在导师[导师姓名]指导下，主要负责[具体职责或研究内容]。该项目成果已发表于[期刊名称]。
-                        在校期间完成了“[另一项目名称]”，致力于解决[具体问题]，使用[技术/工具]进行了[具体工作]，展示了较强的实验设计与数据分析能力。
-                </li>
-                <!-- 你可以复制上面的li块来添加更多教育背景 -->
-            </ul>
-        </section>
-
-        <section id="skills" class="section">
-            <h2>技能</h2>
-            <ul>
-                <li>技能1</li>
-                <li>技能2</li>
-                <li>技能3</li>
-                <!-- 你可以复制上面的li块来添加更多技能 -->
-            </ul>
-        </section>
-
-        <section id="contact" class="section">
-            <h2>联系方式</h2>
-            <p>邮箱: example@example.com</p>
-            <p>电话: 123-456-7890</p>
-        </section>
     </div>
+ 
+    <div class="mid">
+ 
+        <div class="ikun" >
+            <img src="images/kun.jpg" style="width: 150px; border-radius: 10px;" >
+            <div class="ikun_mid">
+                <h3><span>蔡徐坤</span>
+                    <br>
+                    <p style="color: #4088A5">求职意向:个人练习生</p></h3>
+            </div>
+ 
+            <div class="ikun_right">
+                <div class="ikun_r1">
+                    <p>24岁</p>
+                    <img src="images/1.svg" width="30px" height="30px" style="transform: translate(5px,10px)">
+                </div>
+ 
+                <div class="ikun_r2">
+                    <p>1664178416</p>
+                    <img src="images/2.svg" width="30px" height="30px" style="transform: translate(5px,10px)">
+                </div>
+ 
+                <div class="ikun_r3">
+                    <p>1664178416@qq.com</p>
+                    <img src="images/3.svg" width="30px" height="30px" style="transform: translate(5px,10px)">
+                </div>
+ 
+                <div class="ikun_r4">
+                    <p>四川省成都市</p>
+                    <img src="images/4.svg" width="30px" height="30px" style="transform: translate(5px,10px)">
+                </div>
+ 
+            </div>
+ 
+        </div>
+ 
+        <div class="edu">
+            <h3 style="margin-bottom: -8px;"><span style="border-bottom: 3px solid black">教育背景</span></h3>
+            <hr>
+            <div class="normal">
+                <p>2002.07~2006.07</p>
+                <p style="margin-left: 100px">电子科技大学</p>
+                <p style="margin-left: 100px">篮球专业（专科）</p>
+            </div>
+            <p style="margin-top: -10px">主修课程：唱、跳、RAP、打篮球</p>
+        </div>
+ 
+ 
+        <div class="work">
+            <h3 style="margin-bottom: -8px"><span style="border-bottom: 3px solid black">实习经验</span></h3>
+            <hr>
+            <div class="normal">
+                <p>2012.04~至今</p>
+                <p style="margin-left: 100px">电科计院</p>
+                <p style="margin-left: 100px">预备Idol</p>
+            </div>
+            <ul style="margin-top: -10px;margin-left: -15px">
+                <li>主修课程：唱、跳、RAP、打篮球</li>
+                <li>为了爱与正义，为了世界和平，我们ikun要站出来；</li>
+                <li>我就是电科之光。</li>
+            </ul>
+            <div class="normal">
+                <p>2010.03~2012.03</p>
+                <p style="margin-left: 100px">电科计院</p>
+                <p style="margin-left: 100px">预备Idol研究生</p>
+            </div>
+            <ul style="margin-top: -10px;margin-left: -15px">
+                <li>主修课程：唱、跳、RAP、打篮球</li>
+                <li>为了爱与正义，为了世界和平，我们ikun要站出来；</li>
+                <li>我就是电科之光。</li>
+            </ul>
+            <br>
+ 
+        </div>
+ 
+        <div class="school">
+            <h3 style="margin-bottom: -8px"><span style="border-bottom: 3px solid black">校园经历</span></h3>
+            <hr>
+            <div class="normal">
+                <p>2009.03~2011.06</p>
+                <p style="margin-left: 100px">电子科技大学</p>
+                <p style="margin-left: 100px">校园形象大使</p>
+            </div>
+            <ul style="margin-top: -10px;margin-left: -15px">
+                <li>带领自己的团队完成练习计划；</li>
+                <li>为了爱与正义，为了世界和平，我们ikun要站出来；</li>
+                <li>我就是电科之光。</li>
+            </ul>
+        </div>
+ 
+        <div class="tech">
+            <h3 style="margin-bottom: -8px"><span style="border-bottom: 3px solid black">技能证书</span></h3>
+            <hr>
+                <p>电子科技大学校园十佳歌手；</p>
+                <p>电子科技大学舞蹈最佳solo；</p>
+                <p>电子科技大学篮球比赛最有价值球员MVP。</p>
+        </div>
+ 
+        <div class="self">
+            <h3 style="margin-bottom: -8px"><span style="border-bottom: 3px solid black">自我评价</span></h3>
+            <hr>
+            <p>
+                大家好，我是练习时长两年半的个人练习生，我深耕电科十余载，历尽千辛万苦，终学得一技之长，希望我能为我的粉丝们带来快乐，
+                跟着我左手右手一个慢动作，右手左手慢动作重播。
+            </p>
+             </div>
+ 
+    </div>
+    <div class="topline" >
+        <div class="top_left1" ></div>
+        <div class="top_right">
+        </div>
+    </div>
+ 
+</div>
 </body>
 </html>
